[novelViews_student.ipynb]: modified for image rendering

--- a/NovelViews_Student.ipynb
+++ b/NovelViews_Student.ipynb
@@ -2,17 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2dc73c81",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\tudor\\Documents\\GIT\\2023_UNIBE_Computer_Vision_3\\.conda\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'\\nload all neccesary functions!\\n'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +43,7 @@
     "from run_nerf_helpers import *\n",
     "\n",
     "from load_blender import load_blender_data\n",
-    "from run_simple_nerf_student import render_rays_discrete\n",
+    "from run_simple_nerf_student import render_rays_discrete, create_pointcloud\n",
     "\n",
     "'''\n",
     "load all neccesary functions!\n",
@@ -44,10 +52,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "11cea9ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded blender (138, 40, 40, 4) torch.Size([40, 4, 4]) [40, 40, 55.55555155968841]\n"
+     ]
+    }
+   ],
    "source": [
     "K = None\n",
     "device = 'cpu'\n",
@@ -91,13 +107,13 @@
     "\n",
     "\n",
     "main_folder_name = 'resources'\n",
-    "path_pt_cloud = '/home/lc20g554/misc_code/nerf-cv23-course-assign/logs/path'\n",
+    "path_pt_cloud = 'logs/Train_lego/'\n",
     "\n",
     "# create point cloud\n",
     "pt_cloud = torch.load(path_pt_cloud+'/pts_clous.tns').cpu()\n",
     "\n",
-    "sigma_val = torch.load(path_pt_cloud+'/990000/sigma_990000.tns').cpu()\n",
-    "rgb_val =  torch.load(path_pt_cloud+'/990000/rgb_990000.tns').cpu()\n",
+    "sigma_val = torch.load(path_pt_cloud+'/00000/sigma_000.tns').cpu()\n",
+    "rgb_val =  torch.load(path_pt_cloud+'/00000/rgb_000.tns').cpu()\n",
     "\n",
     "# transerer everything on device\n",
     "sigma_val = sigma_val.to(device)\n",
@@ -114,10 +130,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "bbd70979",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/38 [00:00<?, ?it/s]c:\\Users\\tudor\\Documents\\GIT\\2023_UNIBE_Computer_Vision_3\\run_simple_nerf_student.py:139: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  nn_index = torch.tensor(index)\n",
+      "100%|██████████| 38/38 [01:31<00:00,  2.41s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "novel_imgs_display = []\n",
     "for j in trange(100,poses.shape[0], 1):\n",
@@ -141,21 +167,18 @@
     "        t_vals = torch.linspace(0., 1., steps=N_samples)\n",
     "        z_vals = near * (1.-t_vals) + far * (t_vals)\n",
     "\n",
+    "\n",
     "        with torch.no_grad():\n",
     "            # apply the same changes as above!!!\n",
-    "            ret = render_rays_discrete(z_vals = z_vals,\n",
+    "            ret = render_rays_discrete(ray_steps= z_vals,\n",
     "                                       rays_o = rays_o_batch,\n",
     "                                       rays_d = rays_d_batch,\n",
     "                                       N_samples = N_samples,\n",
     "                                       pt_cloud = pt_cloud, \n",
     "                                       rgb_val =rgb_val, \n",
-    "                                       sigma_val = sigma_val, \n",
-    "                                       t_linspace =t_linspace, \n",
-    "                                       pt_cloud_indices = pt_cloud_indices,\n",
-    "                                       pts_res= pts_res, \n",
-    "                                       pts_max =pts_max) \n",
+    "                                       sigma_val = sigma_val,) \n",
     "\n",
-    "        rgb_map = ret['rgb_map']\n",
+    "        rgb_map = ret\n",
     "        rgb_image.append(rgb_map)\n",
     "\n",
     "\n",
@@ -172,10 +195,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "93f0e2e3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/100 [00:00<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "render_rays_discrete() got an unexpected keyword argument 'z_vals'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\tudor\\Documents\\GIT\\2023_UNIBE_Computer_Vision_3\\NovelViews_Student.ipynb Cell 4\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tudor/Documents/GIT/2023_UNIBE_Computer_Vision_3/NovelViews_Student.ipynb#W3sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m z_vals \u001b[39m=\u001b[39m near \u001b[39m*\u001b[39m (\u001b[39m1.\u001b[39m\u001b[39m-\u001b[39mt_vals) \u001b[39m+\u001b[39m far \u001b[39m*\u001b[39m (t_vals)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tudor/Documents/GIT/2023_UNIBE_Computer_Vision_3/NovelViews_Student.ipynb#W3sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m \u001b[39mwith\u001b[39;00m torch\u001b[39m.\u001b[39mno_grad():\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tudor/Documents/GIT/2023_UNIBE_Computer_Vision_3/NovelViews_Student.ipynb#W3sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m     \u001b[39m# apply the same changes as above!!!\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/tudor/Documents/GIT/2023_UNIBE_Computer_Vision_3/NovelViews_Student.ipynb#W3sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m     ret \u001b[39m=\u001b[39m render_rays_discrete(z_vals \u001b[39m=\u001b[39;49m z_vals,\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tudor/Documents/GIT/2023_UNIBE_Computer_Vision_3/NovelViews_Student.ipynb#W3sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m                                rays_o \u001b[39m=\u001b[39;49m rays_o_batch,\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tudor/Documents/GIT/2023_UNIBE_Computer_Vision_3/NovelViews_Student.ipynb#W3sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m                                rays_d \u001b[39m=\u001b[39;49m rays_d_batch,\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tudor/Documents/GIT/2023_UNIBE_Computer_Vision_3/NovelViews_Student.ipynb#W3sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m                                N_samples \u001b[39m=\u001b[39;49m N_samples,\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tudor/Documents/GIT/2023_UNIBE_Computer_Vision_3/NovelViews_Student.ipynb#W3sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m                                pt_cloud \u001b[39m=\u001b[39;49m pt_cloud, \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tudor/Documents/GIT/2023_UNIBE_Computer_Vision_3/NovelViews_Student.ipynb#W3sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m                                rgb_val \u001b[39m=\u001b[39;49mrgb_val, \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tudor/Documents/GIT/2023_UNIBE_Computer_Vision_3/NovelViews_Student.ipynb#W3sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m                                sigma_val \u001b[39m=\u001b[39;49m sigma_val) \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tudor/Documents/GIT/2023_UNIBE_Computer_Vision_3/NovelViews_Student.ipynb#W3sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m rgb_map \u001b[39m=\u001b[39m ret\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tudor/Documents/GIT/2023_UNIBE_Computer_Vision_3/NovelViews_Student.ipynb#W3sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m rgb_image\u001b[39m.\u001b[39mappend(rgb_map)\n",
+      "\u001b[1;31mTypeError\u001b[0m: render_rays_discrete() got an unexpected keyword argument 'z_vals'"
+     ]
+    }
+   ],
    "source": [
     "for j in trange(0,100, 1):\n",
     "\n",
@@ -197,7 +239,7 @@
     "\n",
     "        t_vals = torch.linspace(0., 1., steps=N_samples)\n",
     "        z_vals = near * (1.-t_vals) + far * (t_vals)\n",
-    "\n",
+    "        \n",
     "        with torch.no_grad():\n",
     "            # apply the same changes as above!!!\n",
     "            ret = render_rays_discrete(z_vals = z_vals,\n",
@@ -206,13 +248,9 @@
     "                                       N_samples = N_samples,\n",
     "                                       pt_cloud = pt_cloud, \n",
     "                                       rgb_val =rgb_val, \n",
-    "                                       sigma_val = sigma_val, \n",
-    "                                       t_linspace =t_linspace, \n",
-    "                                       pt_cloud_indices = pt_cloud_indices,\n",
-    "                                       pts_res= pts_res, \n",
-    "                                       pts_max =pts_max) \n",
+    "                                       sigma_val = sigma_val) \n",
     "\n",
-    "        rgb_map = ret['rgb_map']\n",
+    "        rgb_map = ret\n",
     "        rgb_image.append(rgb_map)\n",
     "\n",
     "\n",
@@ -236,25 +274,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "bfbab903",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'sigma_val' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\tudor\\Documents\\GIT\\2023_UNIBE_Computer_Vision_3\\NovelViews_Student.ipynb Cell 6\u001b[0m line \u001b[0;36m4\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/tudor/Documents/GIT/2023_UNIBE_Computer_Vision_3/NovelViews_Student.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmcubes\u001b[39;00m \u001b[39m# need to install\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/tudor/Documents/GIT/2023_UNIBE_Computer_Vision_3/NovelViews_Student.ipynb#W5sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtrimesh\u001b[39;00m \u001b[39m# need to install\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/tudor/Documents/GIT/2023_UNIBE_Computer_Vision_3/NovelViews_Student.ipynb#W5sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m sigma_reshape \u001b[39m=\u001b[39m sigma_val\u001b[39m.\u001b[39mreshape(pts_res,pts_res,pts_res)\u001b[39m.\u001b[39mcpu()\u001b[39m.\u001b[39mnumpy()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/tudor/Documents/GIT/2023_UNIBE_Computer_Vision_3/NovelViews_Student.ipynb#W5sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mprint\u001b[39m(sigma_reshape\u001b[39m.\u001b[39mshape)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/tudor/Documents/GIT/2023_UNIBE_Computer_Vision_3/NovelViews_Student.ipynb#W5sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m threshold \u001b[39m=\u001b[39m \u001b[39m10.\u001b[39m \u001b[39m# choose a reasonable threshold - \u001b[39;00m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'sigma_val' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import mcubes # need to install\n",
-    "import trimesh # need to install\n",
+    "import mcubes \n",
+    "import trimesh \n",
     "\n",
     "sigma_reshape = sigma_val.reshape(pts_res,pts_res,pts_res).cpu().numpy()\n",
     "print(sigma_reshape.shape)\n",
