--- a/NovelViews_Student.ipynb
+++ b/NovelViews_Student.ipynb
@@ -2,25 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "2dc73c81",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\tudor\\Documents\\GIT\\2023_UNIBE_Computer_Vision_3\\.conda\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "'\\nload all neccesary functions!\\n'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "11cea9ce",
    "metadata": {},
    "outputs": [
@@ -130,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "bbd70979",
    "metadata": {},
    "outputs": [
@@ -140,7 +132,7 @@
      "text": [
       "  0%|          | 0/38 [00:00<?, ?it/s]c:\\Users\\tudor\\Documents\\GIT\\2023_UNIBE_Computer_Vision_3\\run_simple_nerf_student.py:139: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  nn_index = torch.tensor(index)\n",
-      "100%|██████████| 38/38 [01:31<00:00,  2.41s/it]\n"
+      "100%|██████████| 38/38 [00:02<00:00, 18.48it/s]\n"
      ]
     }
    ],
@@ -195,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "93f0e2e3",
    "metadata": {},
    "outputs": [
@@ -203,18 +195,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/100 [00:00<?, ?it/s]\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "render_rays_discrete() got an unexpected keyword argument 'z_vals'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\tudor\\Documents\\GIT\\2023_UNIBE_Computer_Vision_3\\NovelViews_Student.ipynb Cell 4\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tudor/Documents/GIT/2023_UNIBE_Computer_Vision_3/NovelViews_Student.ipynb#W3sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m z_vals \u001b[39m=\u001b[39m near \u001b[39m*\u001b[39m (\u001b[39m1.\u001b[39m\u001b[39m-\u001b[39mt_vals) \u001b[39m+\u001b[39m far \u001b[39m*\u001b[39m (t_vals)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tudor/Documents/GIT/2023_UNIBE_Computer_Vision_3/NovelViews_Student.ipynb#W3sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m \u001b[39mwith\u001b[39;00m torch\u001b[39m.\u001b[39mno_grad():\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tudor/Documents/GIT/2023_UNIBE_Computer_Vision_3/NovelViews_Student.ipynb#W3sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m     \u001b[39m# apply the same changes as above!!!\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/tudor/Documents/GIT/2023_UNIBE_Computer_Vision_3/NovelViews_Student.ipynb#W3sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m     ret \u001b[39m=\u001b[39m render_rays_discrete(z_vals \u001b[39m=\u001b[39;49m z_vals,\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tudor/Documents/GIT/2023_UNIBE_Computer_Vision_3/NovelViews_Student.ipynb#W3sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m                                rays_o \u001b[39m=\u001b[39;49m rays_o_batch,\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tudor/Documents/GIT/2023_UNIBE_Computer_Vision_3/NovelViews_Student.ipynb#W3sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m                                rays_d \u001b[39m=\u001b[39;49m rays_d_batch,\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tudor/Documents/GIT/2023_UNIBE_Computer_Vision_3/NovelViews_Student.ipynb#W3sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m                                N_samples \u001b[39m=\u001b[39;49m N_samples,\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tudor/Documents/GIT/2023_UNIBE_Computer_Vision_3/NovelViews_Student.ipynb#W3sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m                                pt_cloud \u001b[39m=\u001b[39;49m pt_cloud, \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tudor/Documents/GIT/2023_UNIBE_Computer_Vision_3/NovelViews_Student.ipynb#W3sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m                                rgb_val \u001b[39m=\u001b[39;49mrgb_val, \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tudor/Documents/GIT/2023_UNIBE_Computer_Vision_3/NovelViews_Student.ipynb#W3sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m                                sigma_val \u001b[39m=\u001b[39;49m sigma_val) \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tudor/Documents/GIT/2023_UNIBE_Computer_Vision_3/NovelViews_Student.ipynb#W3sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m rgb_map \u001b[39m=\u001b[39m ret\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tudor/Documents/GIT/2023_UNIBE_Computer_Vision_3/NovelViews_Student.ipynb#W3sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m rgb_image\u001b[39m.\u001b[39mappend(rgb_map)\n",
-      "\u001b[1;31mTypeError\u001b[0m: render_rays_discrete() got an unexpected keyword argument 'z_vals'"
+      "100%|██████████| 100/100 [00:05<00:00, 18.65it/s]\n"
      ]
     }
    ],
@@ -242,7 +223,7 @@
     "        \n",
     "        with torch.no_grad():\n",
     "            # apply the same changes as above!!!\n",
-    "            ret = render_rays_discrete(z_vals = z_vals,\n",
+    "            ret = render_rays_discrete(ray_steps = z_vals,\n",
     "                                       rays_o = rays_o_batch,\n",
     "                                       rays_d = rays_d_batch,\n",
     "                                       N_samples = N_samples,\n",
@@ -274,10 +255,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "bfbab903",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(200, 200, 200)\n",
+      "fraction occupied 0.0\n",
+      "done (0, 3) (0, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "import mcubes \n",
     "import trimesh \n",
