--- a/NovelViews_Student.ipynb
+++ b/NovelViews_Student.ipynb
@@ -284,6 +284,15 @@
     "# specify path\n",
     "_ = mesh.export(os.path.join(save_folder_train_img, 'mesh.obj'.format(j)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mesh.show()"
+   ]
   }
  ],
  "metadata": {
