--- a/NovelViews_Student.ipynb
+++ b/NovelViews_Student.ipynb
@@ -2,17 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "2dc73c81",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\tudor\\Documents\\GIT\\2023_UNIBE_Computer_Vision_3\\.conda\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'\\nload all neccesary functions!\\n'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "11cea9ce",
    "metadata": {},
    "outputs": [
@@ -122,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "454e9393",
    "metadata": {},
    "outputs": [
@@ -144,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "bbd70979",
    "metadata": {},
    "outputs": [
@@ -152,7 +160,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 38/38 [00:01<00:00, 19.76it/s]\n"
+      "  0%|          | 0/38 [00:00<?, ?it/s]c:\\Users\\tudor\\Documents\\GIT\\2023_UNIBE_Computer_Vision_3\\.conda\\lib\\site-packages\\torch\\functional.py:504: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at C:\\cb\\pytorch_1000000000000\\work\\aten\\src\\ATen\\native\\TensorShape.cpp:3191.)\n",
+      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n",
+      "100%|██████████| 38/38 [00:03<00:00, 10.88it/s]\n"
      ]
     }
    ],
@@ -208,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "93f0e2e3",
    "metadata": {},
    "outputs": [
@@ -216,7 +226,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:04<00:00, 21.02it/s]\n"
+      "100%|██████████| 100/100 [00:06<00:00, 14.51it/s]\n"
      ]
     }
    ],
@@ -276,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "bfbab903",
    "metadata": {},
    "outputs": [
@@ -306,6 +316,16 @@
     "\n",
     "# specify path\n",
     "_ = mesh.export(os.path.join(save_folder_train_img, 'mesh.obj'.format(j)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c857deed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mesh.show()"
    ]
   }
  ],
